# oneapi-rs

./: Cargo.toml
.github/workflows/: basic.yml
oneapi-rs/: Cargo.toml
oneapi-rs-derive/: Cargo.toml
oneapi-rs-derive/src/: lib.rs
oneapi-rs-sys/: build.rs
oneapi-rs-sys/include/: context.hpp  device.hpp  event.hpp  kernel-bundle.hpp  platform.hpp  queue.hpp  shim.hpp  types.hpp  usm.hpp
oneapi-rs-sys/src/: context-sys.rs  context.cpp  device-sys.rs  device.cpp  event-sys.rs  event.cpp  kernel-bundle-sys.rs  kernel-bundle.cpp  lib.rs  main.rs  platform-sys.rs  platform.cpp  queue-sys.rs  queue.cpp  shim.cpp  types-sys.rs  usm-sys.rs  usm.cpp
oneapi-rs/examples/: async.rs  kernel_launch.rs  print-devices.rs  print-platforms.rs  sycl-ls.rs
oneapi-rs/src/: buffer.rs  context.rs  device.rs  event.rs  info.rs  kernel.rs  kernel_bundle.rs  lib.rs  platform.rs  queue.rs  range.rs  usm.rs
oneapi-rs/src/info/: device-info.rs  platform-info.rs
oneapi-rs/tests/: alloc.rs
