[package]
name = "oneapi-rs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
allocator-api2 = "0.4.0"
bytemuck = "1.25.1"
cxx = "1.0.194"
oneapi-rs-sys = { path = "../oneapi-rs-sys" }
oneapi-rs-derive = { path = "../oneapi-rs-derive" }
pin-project = "1.1.13"
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt", "rt-multi-thread"] }
